Clicking more button adds ingredient to burger

--- a/src/components/Burger/Burger.css
+++ b/src/components/Burger/Burger.css
@@ -4,6 +4,7 @@
     height: 250px;
     text-align: bold;
     font-size: 1.2rem;
+    align-content: center;
 }
 
 @media (min-width: 1000px) and (min-height: 700px) {
