--- a/src/components/Burger/Burger.css
+++ b/src/components/Burger/Burger.css
@@ -5,6 +5,7 @@
     text-align: bold;
     font-size: 1.2rem;
     align-content: center;
+    overflow: auto;
 }
 
 @media (min-width: 1000px) and (min-height: 700px) {
